# kaleidoscope

./: CMakeLists.txt  Makefile  README.md
include/: lexer.h
src/: lexer  lexer.cpp  lexer.h
tests/: lexer_test.cpp
